--- a/assets/chat/css/messages/event/_vestaboard.scss
+++ b/assets/chat/css/messages/event/_vestaboard.scss
@@ -15,7 +15,7 @@ $vb-colors: (
   'gray': #777b84,
 );
 
-.vestaboard {
+.msg-vestaboard {
   border-color: #0090ff;
 
   .event-icon {
